<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/framing_large"
            android:layout_marginBottom="@dimen/static_spacing_large_less">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/vLoginCover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bg_login_cover"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@id/vLoginCover"
                    android:background="@drawable/login_gradient"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:src="@drawable/bg_home_wolox_logo" />

        </FrameLayout>

        <EditText
            android:id="@+id/vUsernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/static_spacing_medium_extra"
            android:layout_marginStart="@dimen/static_spacing_medium_extra"
            android:gravity="left"
            android:hint="@string/fragment_login_username"
            android:singleLine="true" />

        <EditText
            android:id="@+id/vPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/static_spacing_large_less"
            android:layout_marginEnd="@dimen/static_spacing_medium_extra"
            android:layout_marginStart="@dimen/static_spacing_medium_extra"
            android:gravity="left"
            android:hint="@string/fragment_login_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/vLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/static_spacing_medium_extra"
                android:layout_marginStart="@dimen/static_spacing_medium_extra"
                android:text="@string/fragment_login_login" />

            <ProgressBar
                android:id="@+id/vProgressCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/static_spacing_medium_extra"
                android:elevation="@dimen/static_spacing_tiny"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/holo_blue_dark"
                android:visibility="gone" />

        </FrameLayout>

        <Button
            android:id="@+id/vSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/static_spacing_medium_extra"
            android:layout_marginStart="@dimen/static_spacing_medium_extra"
            android:backgroundTint="@color/chuck_status_300"
            android:text="@string/fragment_login_signup"
            android:textColor="@color/chuck_status_requested" />

    </LinearLayout>

    <TextView
        android:id="@+id/vTermsConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/static_spacing_large_less"
        android:layout_marginEnd="@dimen/static_spacing_medium_extra"
        android:layout_marginStart="@dimen/static_spacing_medium_extra"
        android:gravity="center"
        android:text="@string/terms_and_conditions"
        android:textSize="@dimen/font_medium" />

</FrameLayout>
